# axiom-vault

./: .gitignore  .pre-commit-config.yaml  APP_STORE.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  LICENSE  Makefile  NOTICE  PRD.md  QA_FIXES_IMPLEMENTED.md  README.md  SECURITY.md  deny.toml  run-desktop.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: check-unsafe.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: android-build.yml  ios-build.yml  pr-check.yml  pr-review.yml  release-beta-on-push.yml  release.yml  rust-ci.yml  rust.yml
clients/android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/cpp/: CMakeLists.txt  axiom_vault_jni.cpp
clients/android/app/src/main/res/values/: colors.xml  (+2 more)
clients/apple/: project.yml
clients/apple/AxiomVault-iOS/Resources/: AxiomVault-iOS.entitlements  Info.plist  PrivacyInfo.xcprivacy
clients/apple/AxiomVault-iOS/Sources/: AxiomVaultApp.swift  VaultManager+iOS.swift
clients/apple/AxiomVault-iOS/Sources/Services/: AppleSignIn.swift  BackgroundSync.swift  GoogleDriveAuth.swift
clients/apple/AxiomVault-iOS/Sources/Views/: ContentView.swift  CreateVaultView.swift  OpenVaultView.swift  VaultBrowserView.swift
clients/apple/AxiomVault-macOS/Resources/: AxiomVault-macOS.entitlements  Info.plist
clients/apple/AxiomVault-macOS/Sources/: AxiomVaultApp.swift  VaultManager+macOS.swift
clients/apple/AxiomVault-macOS/Sources/Views/: CreateVaultView.swift  MainView.swift  MenuBarView.swift  SettingsView.swift  SidebarView.swift  UnlockVaultView.swift  VaultBrowserView.swift
clients/apple/AxiomVault.xcodeproj/: project.pbxproj
clients/apple/AxiomVault.xcodeproj/project.xcworkspace/xcuserdata/christian.xcuserdatad/: UserInterfaceState.xcuserstate
clients/apple/AxiomVault.xcodeproj/xcshareddata/xcschemes/: AxiomVault-iOS.xcscheme  AxiomVault-macOS.xcscheme
clients/apple/AxiomVaultUITests/: AxiomVaultUITests.swift
clients/apple/FileProvider/Resources/: FileProvider.entitlements
clients/apple/FileProvider/Sources/: FileProviderEnumerator.swift  FileProviderExtension.swift  FileProviderItem.swift
clients/apple/Frameworks/AxiomVaultCore.xcframework/: Info.plist
clients/apple/Frameworks/AxiomVaultCore.xcframework/macos-arm64_x86_64/Headers/: axiom_vault.h  module.modulemap
clients/apple/Scripts/: build-apple.sh
clients/apple/Shared/Services/: BiometricAuth.swift  CacheManager.swift
clients/apple/Shared/Sources/Core/: AxiomVault-Bridging-Header.h  VaultCore.swift
clients/apple/Shared/Sources/Models/: SyncManager.swift  VaultManager.swift
clients/apple/Shared/Sources/Views/: SyncSettingsView.swift  SyncStatusView.swift
clients/desktop/: README.md  axiomvault-launcher.sh  axiomvault.desktop  check-deps.sh  run-desktop.sh
clients/desktop/src/: app.js  index.html  styles.css
clients/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/desktop/src-tauri/src/: commands.rs  local_index.rs  main.rs  state.rs
clients/ios/: README.md  project.yml
clients/ios/AxiomVault/Resources/: AxiomVault.entitlements  GoogleServices-Info.plist  Info.plist
clients/ios/AxiomVault/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
clients/ios/AxiomVault/Sources/: AxiomVaultApp.swift
clients/ios/AxiomVault/Sources/Core/: AxiomVault-Bridging-Header.h  VaultCore.swift
clients/ios/AxiomVault/Sources/Models/: VaultManager.swift
clients/ios/AxiomVault/Sources/Services/: AppleSignIn.swift  BiometricAuth.swift  GoogleDriveAuth.swift
clients/ios/AxiomVault/Sources/Views/: ContentView.swift  CreateVaultView.swift  OpenVaultView.swift  VaultBrowserView.swift
clients/ios/Scripts/: build-ios.sh
clients/linux/: Cargo.toml
clients/linux/src/: app.rs  main.rs
clients/linux/src/ui/: browser.rs  mod.rs  recovery_dialog.rs  unlock.rs  window.rs
clients/macos/: project.yml
clients/macos/AxiomVault/Resources/: Info.plist
clients/macos/AxiomVault/Sources/: AxiomVaultApp.swift
clients/macos/AxiomVault/Sources/Core/: AxiomVault-Bridging-Header.h  VaultCore.swift
clients/macos/AxiomVault/Sources/Models/: VaultManager.swift
clients/macos/AxiomVault/Sources/Views/: MainView.swift
clients/macos/FileProvider/Resources/: Info.plist
clients/macos/Scripts/: build-macos.sh
core/app/: Cargo.toml
core/app/src/: dto.rs  error.rs  events.rs  lib.rs  local_index.rs  service.rs
core/app/tests/: app_service_contract.rs
core/common/: Cargo.toml
core/common/src/: error.rs  health.rs  lib.rs  types.rs
core/crypto/: Cargo.toml
core/crypto/src/: aead.rs  kdf.rs  keys.rs  lib.rs  recovery.rs  stream.rs
core/ffi/: Cargo.toml  build.rs  cbindgen.toml
core/ffi/src/: error.rs  lib.rs  runtime.rs  types.rs  vault_ops.rs
core/fuse/: Cargo.toml
core/fuse/src/: filesystem.rs  lib.rs  mount.rs
core/storage/: Cargo.toml
core/storage/src/: cloud_auth.rs  composite.rs  health.rs  http_client.rs  lib.rs  local.rs  memory.rs  provider.rs  rebuild.rs  registry.rs  shard_map.rs
core/storage/src/composite/: config.rs  erasure.rs  fanout.rs  health.rs  mod.rs  tests.rs
core/storage/src/dropbox/: auth.rs  client.rs  mod.rs  provider.rs
core/storage/src/gdrive/: auth.rs  client.rs  mod.rs  provider.rs
core/storage/src/icloud/: mod.rs  provider.rs
core/storage/src/onedrive/: auth.rs  client.rs  mod.rs  provider.rs
core/sync/: Cargo.toml
core/sync/src/: conflict.rs  engine.rs  lib.rs  retry.rs  scheduler.rs  staging.rs  state.rs
core/vault/: Cargo.toml
core/vault/src/: config.rs  health.rs  lib.rs  manager.rs  migration.rs  operations.rs  session.rs  tree.rs
core/webdav/: Cargo.toml
core/webdav/src/: config.rs  handler.rs  lib.rs  xml.rs
docs/: SECURITY_AUDIT_2026-04-21.md  cloud-raid.md  packaging-strategy.md  threat-model.md
docs/architecture/: native-desktop.md
scripts/: check-versions.sh
tests/computer-use/: harness.py  run.sh  scenarios.py
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
(+18 files in other folders)
