[workspace]
resolver = "2"
members = [
    "core/crypto",
    "core/vault",
    "core/storage",
    "core/common",
    "core/sync",
    "core/ffi",
    "tools/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AxiomVault Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
blake2 = "0.10"
rand = "0.9.2"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Testing
proptest = "1.0"
tempfile = "3.8"

# Utils
base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client and OAuth2
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
oauth2 = "4.4"
url = "2.5"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"
