[package]
name = "axiomvault-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axiomvault-common = { path = "../common" }
axiomvault-vault = { path = "../vault" }
axiomvault-storage = { path = "../storage" }
axiomvault-sync = { path = "../sync" }
axiomvault-crypto = { path = "../crypto" }

async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
rusqlite.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = { workspace = true }
