[package]
name = "axiomvault-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
axiomvault-common = { path = "../common" }

argon2.workspace = true
chacha20poly1305.workspace = true
blake2.workspace = true
rand.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true

[dev-dependencies]
proptest.workspace = true
