[package]
name = "axiom-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FFI bindings for AxiomVault core"

[lib]
name = "axiom_vault"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Shared application facade — the only core dependency the FFI layer needs.
axiomvault-app = { path = "../app" }
# Direct vault access needed for health check and migration (not in AppService).
axiomvault-vault = { path = "../vault" }
axiomvault-common = { path = "../common" }

# Runtime
tokio = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# For C FFI
once_cell = "1.18"

[build-dependencies]
cbindgen = "0.29"

[features]
default = []
ios = []
android = []
