[package]
name = "axiomvault-fuse"
version.workspace = true
edition.workspace = true

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
axiomvault-common = { path = "../common" }
axiomvault-vault = { path = "../vault" }
axiomvault-storage = { path = "../storage" }
axiomvault-crypto = { path = "../crypto" }

# FUSE (optional, requires libfuse3-dev or macFUSE)
fuser = { version = "0.16", optional = true }
libc = { version = "0.2", optional = true }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utils
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
