[package]
name = "axiomvault-fuse"
version.workspace = true
edition.workspace = true
# NOTE: This crate is Linux/macOS only. It must NOT be compiled for iOS targets.
# The iOS FFI crate (core/ffi) intentionally does not depend on this crate.
# All fuse/mount functionality is guarded by the "fuse" feature flag.

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
axiomvault-common = { path = "../common" }
axiomvault-vault = { path = "../vault" }
axiomvault-storage = { path = "../storage" }
axiomvault-crypto = { path = "../crypto" }

# FUSE (optional, requires libfuse3-dev or macFUSE)
fuser = { version = "0.17", optional = true }
libc = { version = "0.2", optional = true }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
zeroize.workspace = true

# Utils
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
