[package]
name = "axiomvault-storage"
version.workspace = true
edition.workspace = true

[dependencies]
axiomvault-common = { path = "../common" }

async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
