[package]
name = "axiomvault-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "axiomvault"
path = "src/main.rs"

[dependencies]
axiomvault-common = { path = "../../core/common" }
axiomvault-crypto = { path = "../../core/crypto" }
axiomvault-storage = { path = "../../core/storage" }
axiomvault-vault = { path = "../../core/vault" }
axiomvault-sync = { path = "../../core/sync" }

clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
rpassword = "7.0"
open.workspace = true
url.workspace = true
