[package]
name = "axiomvault-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AxiomVault Desktop Client"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
axiomvault-app = { path = "../../../core/app" }
axiomvault-fuse = { path = "../../../core/fuse" }

tauri.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "6.0"
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
fuse = ["axiomvault-fuse/fuse"]

[[bin]]
name = "axiomvault-desktop"
path = "src/main.rs"
